--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
 
     <Toolbar
         android:id="@+id/toolbar"
-        android:title="NaResbob"
+        android:title="@string/naresbob"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/coklat_utama"
